tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/char_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Char())

